# napari-openpiv

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: conf.py  index.rst
src/napari_openpiv/: _widget.py  napari.yaml  run.py
src/napari_openpiv/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
